--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-pdf": "^9.1.0",
     "react-router": "^6.26.1",
     "react-router-dom": "^6.23.1",
     "web-vitals": "^2.1.4"
