--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.5.136",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
